trying to solve error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-
-numpy==1.25.2
-sentence-transformers==2.2.2
-chromadb==0.3.29
-streamlit==1.26.0
-openai==1.0.0
-python-dotenv==1.0.0
-tiktoken==0.4.0
-pypdf==3.12.0
-
-
+streamlit
+openai
+python-dotenv
+numpy
+tiktoken
+pypdf
+sentence-transformers
+chromadb
